No need for --add-opens. Thanks Lahváči!