@@ -30,12 +30,6 @@
     <packaging>jar</packaging>
     <properties>
         <debug />
-        <add.opens.1>--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</add.opens.1>
-        <add.opens.2>--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</add.opens.2>
-        <add.opens.3>--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</add.opens.3>
-        <add.opens.4>--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</add.opens.4>
-        <add.opens.5>--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</add.opens.5>
-        <add.opens.6>--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</add.opens.6>
     </properties>
     <build>
         <plugins>
@@ -79,14 +73,6 @@
 -hiddingannotation org.apidesign.javadoc.testing.HiddenSnippets.Invisible
 -header Header -bottom Bottom -group Extra org.apidesign.javadoc.testing:org.apidesign.javadoc -Xdoclint:none
                     </additionalOptions>
-                    <additionalJOptions>
-                        <opt>-J${add.opens.1}</opt>
-                        <opt>-J${add.opens.2}</opt>
-                        <opt>-J${add.opens.3}</opt>
-                        <opt>-J${add.opens.4}</opt>
-                        <opt>-J${add.opens.5}</opt>
-                        <opt>-J${add.opens.6}</opt>
-                    </additionalJOptions>
                     <failOnWarnings>true</failOnWarnings>
                 </configuration>
             </plugin>
@@ -110,20 +96,4 @@
             <type>jar</type>
         </dependency>
     </dependencies>
-    <profiles>
-        <profile>
-            <id>java-8</id>
-            <activation>
-                <jdk>1.8</jdk>
-            </activation>
-            <properties>
-                <add.opens.1>-Dignore=</add.opens.1>
-                <add.opens.2>-Dignore=</add.opens.2>
-                <add.opens.3>-Dignore=</add.opens.3>
-                <add.opens.4>-Dignore=</add.opens.4>
-                <add.opens.5>-Dignore=</add.opens.5>
-                <add.opens.6>-Dignore=</add.opens.6>
-            </properties>
-        </profile>
-    </profiles>
 </project>
